@@ -1,5 +1,10 @@
 2014-08-29  Paolo Carlini  <paolo.carlini@oracle.com>
 
+	PR c++/59938
+	* g++.dg/cpp0x/constexpr-59938.C: New.
+
+2014-08-29  Paolo Carlini  <paolo.carlini@oracle.com>
+
 	PR c++/61484
 	* g++.dg/cpp0x/constexpr-61484.C: New.
 
